@@ -112,7 +112,7 @@ enum {
 	SC_DELUGE,
 	SC_VIOLENTGALE,
 	SC_WATK_ELEMENT,
-	SC_LANDPROTECTOR, //Available
+	SC_ARMOR,
 	SC_ARMOR_ELEMENT,
 	SC_NOCHAT,
 	SC_BABY,
